--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
+@font-face {
+  font-family: 'Schwifty';
+  src: url('./assets/get_schwifty.ttf') format('truetype');
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url('./images/sw-bg.jpg');
+  background-image: url('./images/rm-bg2.png');
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
